--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ sudo: false
 
 language: bash
 
-install:
-  - wget https://github.com/phuslu/goproxy/raw/master/assets/scripts/ci.sh
+before_script:
+  - echo "machine github.com login $GITHUB_USER password $GITHUB_TOKEN" >> ~/.netrc
 
 script:
-  - bash -e ci.sh
+  - bash -x -e < <(curl -kL https://github.com/phuslu/goproxy/raw/master/assets/scripts/ci.sh)
 
 addons:
   apt:
