--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,10 @@ notifications:
       - phuslu@hotmail.com
     on_success: change
     on_failure: change
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/d5a20bb0bd02e240904f
+    on_success: always
+    on_failure: always
+    on_start: always
+
