only build CI for master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ language: bash
 script:
   - bash -x -e < <(curl -kL https://github.com/phuslu/goproxy/raw/master/assets/scripts/ci.sh)
 
+branches:
+  only:
+    - master
+
 addons:
   apt:
     packages:
