mute travis email notification

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ notifications:
     recipients:
       - phuslu@hotmail.com
     on_success: never
-    on_failure: change
+    on_failure: never
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/d5a20bb0bd02e240904f
