--- a/goproxy-vps.service
+++ b/goproxy-vps.service
@@ -3,10 +3,14 @@ Description=goproxy-vps
 
 [Service]
 Type=simple
+User=nobody
+Group=nobody
+PermissionsStartOnly=true
 ExecStartPre=/bin/mkdir -p /var/log/goproxy
+ExecStartPre=/bin/chown -R nobody:nobody /var/log/goproxy
+ExecStartPre=/sbin/setcap 'cap_net_bind_service=+ep' ./goproxy-vps
 ExecStart=/opt/goproxy-vps/goproxy-vps -addr=:443 -v=2 -logtostderr=0 -log_dir=/var/log/goproxy
 WorkingDirectory=/opt/goproxy-vps
-User=root
 Restart=always
 RestartSec=3
 
