--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,11 @@ addons:
   apt:
     packages:
       - p7zip-full
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/cf18a3489def38eefa87
+    on_success: always
+    on_failure: always
+    on_start: always
