refine goproxy-gtk.desktop generation
Signed-off-by: phuslu <phuslu@hotmail.com>

--- a/assets/packaging/goproxy-gtk.desktop
+++ b/assets/packaging/goproxy-gtk.desktop
@@ -1,10 +1,10 @@
 #!/usr/bin/env xdg-open
 [Desktop Entry]
 Type=Application
-Name=GoProxy GTK
+Name=GoProxy
 Comment=GoProxy GTK Launcher
 Categories=Network;Proxy;
-Exec=bash -c "export PATH=$PATH:`dirname '%k'`; goproxy-gtk.py"
+Exec=bash -c "export PATH=$PATH:`dirname '%k'`; exec goproxy-gtk.py"
 Icon=applications-internet
 Terminal=false
 StartupNotify=true
