--- a/goproxy-vps.toml
+++ b/goproxy-vps.toml
@@ -2,14 +2,12 @@
 log_level = 2
 
 [[server]]
-enabled = false
 listen = [":443"]
 server_name = "example.org"
 proxy_fallback = "http://127.0.0.1:80"
 
 [[server]]
-enabled = false
 listen = [":443"]
-server_name = "proxy.eample.org"
+server_name = "proxy.example.org"
 parent_proxy = "http://127.0.0.1:8080"
 proxy_auth_method = "pam"
