--- a/goproxy-vps.toml
+++ b/goproxy-vps.toml
@@ -1,19 +1,15 @@
 [default]
 log_level = 2
-mode = "https"
-
-[https]
-disable_autocert = false
-keyfile = ""
-certfile = ""
 
 [[server]]
-listen = [":443"]
-server_name = ["example.org"]
+listen = ":443"
+server_name = "example.org"
+autocert = true
 proxy_fallback = "http://127.0.0.1:80"
 
 [[server]]
-listen = [":443"]
-server_name = ["proxy.example.org"]
+listen = ":443"
+server_name = "proxy.example.org"
+autocert = true
 parent_proxy = "http://127.0.0.1:8080"
 proxy_auth_method = "pam"
