--- a/goproxy-vps.toml
+++ b/goproxy-vps.toml
@@ -6,7 +6,7 @@ daemon_stderr = "./goproxy-vps.log"
 listen = ":443"
 server_name = ["example.org"]
 proxy_fallback = "http://127.0.0.1:80"
-verify_client_pem = """"""
+client_auth_pem = """"""
 
 [[http2]]
 listen = ":443"
