add [[https]] example to goproxy-vps.toml
Signed-off-by: Phus Lu <phuslu@hotmail.com>

--- a/goproxy-vps.toml
+++ b/goproxy-vps.toml
@@ -9,7 +9,7 @@ server_name = ["example.org"]
 proxy_fallback = "http://127.0.0.1:80"
 client_auth_pem = """"""
 
-[[http2]]
+[[https]]
 listen = ":443"
 server_name = ["proxy.example.org"]
 proxy_fallback = "file:///var/www/html"
