--- a/goproxy-vps.toml
+++ b/goproxy-vps.toml
@@ -15,6 +15,12 @@ server_name = ["proxy.example.org"]
 proxy_fallback = "file:///var/www/html"
 proxy_auth_method = "pam"
 
+[[http2]]
+listen = ":443"
+server_name = ["mainland.example.org"]
+parent_proxy = "quic://flyspace.ml"
+proxy_fallback = "http://127.0.0.1:80"
+
 [[tls]]
 server_name = ["demo.example.org"]
 backend = "127.0.0.1:8443"
